# configparser

./: .gitignore  autoconfig.py  json_func.py  pyproject.toml
configparser/: main.py
configparser/configs/: apps.yaml  park.yaml
configparser/entities/: apps.py  park.py
tests/: test_configparser.py
